# bootcamp-turma-6-data-platform

./: .pre-commit-config.yaml  app.py  pyproject.toml  requirements.txt  revisao_orientacao_objeto.py  setup.py
.github/workflows/: deploy_dev.yaml  deploy_production.yml  deploy_staging.yml
bootcamp_turma_6_data_platform/: bootcamp_turma_6_data_platform_stack.py  common_stack.py
bootcamp_turma_6_data_platform/airflow/: requirements.txt  stack.py
bootcamp_turma_6_data_platform/airflow/dags/: mercado_bitcoin.py
bootcamp_turma_6_data_platform/airflow_stack/: stack.py
bootcamp_turma_6_data_platform/airflow_stack/dags/: mercado_bitcoin.py
bootcamp_turma_6_data_platform/athena/: base.py  stack.py
bootcamp_turma_6_data_platform/data_lake/: base.py  stack.py
bootcamp_turma_6_data_platform/databricks/: stack.py
bootcamp_turma_6_data_platform/dms/: stack.py
bootcamp_turma_6_data_platform/glue_catalog/: base.py  stack.py
bootcamp_turma_6_data_platform/kinesis/: stack.py
bootcamp_turma_6_data_platform/redshift/: stack.py
local_scripts/: insert_to_rds.py  put_to_firehose.py  update_to_rds.py
notebook_databricks/: Bootcamp turma 6.ipynb
